--- a/products-designli/package.json
+++ b/products-designli/package.json
@@ -12,6 +12,7 @@
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
     "@rneui/base": "^4.0.0-rc.7",
+    "@rneui/layout": "^0.0.0-alpha.6",
     "@rneui/themed": "^4.0.0-rc.8",
     "axios": "^1.7.7",
     "expo": "~51.0.28",
@@ -19,7 +20,7 @@
     "react": "18.2.0",
     "react-native": "0.74.5",
     "react-native-gesture-handler": "~2.16.1",
-    "react-native-mmkv": "^3.1.0",
+    "react-native-mmkv": "2.12.2",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "zustand": "^5.0.1"
