--- a/products-designli/tsconfig.json
+++ b/products-designli/tsconfig.json
@@ -9,6 +9,7 @@
       "@navigation/*": ["./src/navigation/*"],
       "@api/*": ["./src/api/*"],
       "@screens/*": ["./src/screens/*"],
+      "@utils/*": ["./src/utils/*"],
       "@store/*": ["./src/store/*"],
       "@models/*": ["./src/models/*"],
     }
