--- a/products-designli/package.json
+++ b/products-designli/package.json
@@ -6,7 +6,8 @@
     "start": "expo start",
     "android": "expo run:android",
     "ios": "expo run:ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "test": "jest --watchAll"
   },
   "dependencies": {
     "@react-navigation/native": "^6.1.18",
@@ -27,8 +28,13 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@testing-library/react-native": "^12.8.1",
+    "@types/jest": "^29.5.14",
     "@types/react": "~18.2.45",
     "babel-plugin-module-resolver": "^5.0.2",
+    "jest": "^29.7.0",
+    "jest-expo": "^51.0.4",
+    "react-test-renderer": "18.2.0",
     "typescript": "^5.1.3"
   },
   "private": true
